feat: add route change animation

--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -17,7 +17,7 @@
       </div>
 
       <div class="flex items-center">
-        <md-search></md-search>
+        <md-search class="md:w-[400px]"></md-search>
         <div class="flex items-center ms-3">
           <button
             type="button"
