--- a/src/app/routes/dashboard/components/gainers-losers/gainers-losers.component.html
+++ b/src/app/routes/dashboard/components/gainers-losers/gainers-losers.component.html
@@ -27,13 +27,13 @@
       <th>Price</th>
       <th>Change</th>
       <th>Change %</th>
-      <th>open</th>
-      <th>vol</th>
-      <th>prev close</th>
-      <th>prev open</th>
-      <th>prev low</th>
-      <th>prev high</th>
-      <th>prev vol</th>
+      <th>Open</th>
+      <th>Vol</th>
+      <th>Prev Close</th>
+      <th>Prev Open</th>
+      <th>Prev Low</th>
+      <th>Prev High</th>
+      <th>Prev Vol</th>
       <th>Updated</th>
     </thead>
     <tbody>
