--- a/src/app/core/components/search/search.component.html
+++ b/src/app/core/components/search/search.component.html
@@ -1,7 +1,7 @@
 <div class="search">
   <input
     type="text"
-    placeholder="search markets..."
+    placeholder="Search markets..."
     [formControl]="searchCtrl"
     [matAutocomplete]="autoComplete"
   />
