--- a/src/app/core/components/theme-switch/theme-switch.component.html
+++ b/src/app/core/components/theme-switch/theme-switch.component.html
@@ -1,10 +1,10 @@
 @if ({ dm: darkMode$ | async }; as data) {
   <mat-button-toggle-group (change)="toggle($event.value)">
     <mat-button-toggle [value]="false" [checked]="!data.dm" aria-label="Light Mode">
-      <mat-icon>light_mode</mat-icon>
+      <mat-icon>light_mode</mat-icon> Light
     </mat-button-toggle>
     <mat-button-toggle [value]="true" [checked]="data.dm" aria-label="Dark Mode">
-      <mat-icon>nightlight</mat-icon>
+      <mat-icon>nightlight</mat-icon> Dark
     </mat-button-toggle>
   </mat-button-toggle-group>
 }
