--- a/src/app/routes/markets/components/stock-summary/stock-summary.component.html
+++ b/src/app/routes/markets/components/stock-summary/stock-summary.component.html
@@ -1,5 +1,5 @@
 @if (data$ | async; as data) {
-  @if (data.summary && data.snapshot) {
+  @if (data.summary && data.uniSnapshot) {
     <div class="flex flex-row w-full">
       <div class="pr-5">
         <a [href]="data.summary.homepage_url" target="_blank">
@@ -26,13 +26,13 @@
             <p>At close: data</p>
           </div>
           <div class="w-1/2">
-            @switch (data.snapshot.market_status) {
+            @switch (data.uniSnapshot.market_status) {
               @case ('open') {
                 <p class="dark:text-white text-3xl">
-                  {{ data.snapshot.session?.price | number: '1.2-2' }}
-                  <span class="text-base" [mdPrice]="data.snapshot.session?.change"
-                    >{{ data.snapshot.session?.change | number: '1.2-2' }} ({{
-                      data.snapshot.session?.change_percent | number: '1.2-2'
+                  {{ data.uniSnapshot.session?.price | number: '1.2-2' }}
+                  <span class="text-base" [mdPrice]="data.uniSnapshot.session?.change"
+                    >{{ data.uniSnapshot.session?.change | number: '1.2-2' }} ({{
+                      data.uniSnapshot.session?.change_percent | number: '1.2-2'
                     }}%)
                   </span>
                 </p>
@@ -46,10 +46,10 @@
               }
               @case ('early_trading') {
                 <p class="dark:text-white text-3xl">
-                  {{ data.latestPrice?.vw || data.snapshot.session?.price | number: '1.2-2' }}
-                  <span class="text-base" [mdPrice]="data.snapshot.session?.early_trading_change"
-                    >{{ data.snapshot.session?.early_trading_change | number: '1.2-2' }} ({{
-                      data.snapshot.session?.early_trading_change_percent | number: '1.2-2'
+                  {{ data.latestPrice?.vw || data.uniSnapshot.session?.price | number: '1.2-2' }}
+                  <span class="text-base" [mdPrice]="data.uniSnapshot.session?.early_trading_change"
+                    >{{ data.uniSnapshot.session?.early_trading_change | number: '1.2-2' }} ({{
+                      data.uniSnapshot.session?.early_trading_change_percent | number: '1.2-2'
                     }}%)
                   </span>
                 </p>
