--- a/src/app/routes/markets/components/stock/stock.component.html
+++ b/src/app/routes/markets/components/stock/stock.component.html
@@ -33,20 +33,20 @@
           <div class="flex justify-between mb-6">
             <span class="uppercase">Previous Close</span>
             <span class="dark:text-white">{{
-              data.snapshot?.session?.previous_close | number: '1.2-2'
+              data.uniSnapshot?.session?.previous_close | number: '1.2-2'
             }}</span>
           </div>
           <div class="flex justify-between mb-6">
             <span class="uppercase">Open</span>
             <span class="dark:text-white">{{
-              data.snapshot?.session?.open | number: '1.2-2'
+              data.uniSnapshot?.session?.open | number: '1.2-2'
             }}</span>
           </div>
           <div class="flex justify-between mb-6">
             <span class="uppercase">Day's Range</span>
             <span class="dark:text-white">
-              {{ data.snapshot?.session?.low | number: '1.2-2' }} -
-              {{ data.snapshot?.session?.high | number: '1.2-2' }}
+              {{ data.uniSnapshot?.session?.low | number: '1.2-2' }} -
+              {{ data.uniSnapshot?.session?.high | number: '1.2-2' }}
             </span>
           </div>
           <div class="flex justify-between mb-6">
@@ -56,7 +56,7 @@
           <div class="flex justify-between mb-6">
             <span class="uppercase">Volume</span>
             <span class="dark:text-white">
-              {{ data.snapshot?.session?.volume | number }}
+              {{ data.uniSnapshot?.session?.volume | number }}
             </span>
           </div>
           <div class="flex justify-between mb-6">
