--- a/src/app/routes/markets/markets.component.html
+++ b/src/app/routes/markets/markets.component.html
@@ -1,48 +1,8 @@
 <md-standard-template title="Market Latest">
-  <div class="grid grid-cols-3 gap-4 mb-4">
-    <div class="grid-box items-center justify-center h-24">
-      <p class="text-2xl text-gray-400 dark:text-gray-500">
-        <mat-icon>add</mat-icon>
-      </p>
-    </div>
-    <div class="grid-box items-center justify-center h-24">
-      <p class="text-2xl text-gray-400 dark:text-gray-500">
-        <mat-icon>add</mat-icon>
-      </p>
-    </div>
-    <div class="flex items-center justify-center h-24 rounded bg-gray-50 dark:bg-gray-800">
-      <p class="text-2xl text-gray-400 dark:text-gray-500">
-        <mat-icon>add</mat-icon>
-      </p>
-    </div>
+  <div class="grid-box mb-4 !p-2 overflow-x-auto min-h-24">
+    <md-favourites-ticker></md-favourites-ticker>
   </div>
-
-  <div class="grid-box items-center justify-center h-48 mb-4">
-    <p class="text-2xl text-gray-400 dark:text-gray-500">
-      <mat-icon>add</mat-icon>
-    </p>
-  </div>
-
-  <div class="grid grid-cols-2 gap-4 mb-4">
-    <div class="grid-box items-center justify-center">
-      <p class="text-2xl text-gray-400 dark:text-gray-500">
-        <mat-icon>add</mat-icon>
-      </p>
-    </div>
-    <div class="grid-box items-center justify-center rounded">
-      <p class="text-2xl text-gray-400 dark:text-gray-500">
-        <mat-icon>add</mat-icon>
-      </p>
-    </div>
-    <div class="grid-box items-center justify-center rounded">
-      <p class="text-2xl text-gray-400 dark:text-gray-500">
-        <mat-icon>add</mat-icon>
-      </p>
-    </div>
-    <div class="grid-box items-center justify-center">
-      <p class="text-2xl text-gray-400 dark:text-gray-500">
-        <mat-icon>add</mat-icon>
-      </p>
-    </div>
+  <div class="grid-box mb-4 !p-0">
+    <md-all></md-all>
   </div>
 </md-standard-template>
