--- a/src/styles/partials/_prices.scss
+++ b/src/styles/partials/_prices.scss
@@ -3,6 +3,7 @@
   display: inline-block;
   padding: 0 5px;
   border-radius: 4px;
+  white-space: nowrap;
 
   &:before {
     content: '+';
@@ -16,6 +17,7 @@
   padding: 0 5px;
   display: inline-block;
   border-radius: 4px;
+  white-space: nowrap;
 }
 
 .highlight-up {
