feat: subscribe to price events

--- a/src/app/core/components/chart/chart.component.html
+++ b/src/app/core/components/chart/chart.component.html
@@ -7,7 +7,7 @@
         [value]="range$.value"
         (change)="range$.next($event.value)"
       >
-        <mat-button-toggle value="live">LIVE</mat-button-toggle>
+        <mat-button-toggle value="live">Live</mat-button-toggle>
         <mat-button-toggle value="day">1D</mat-button-toggle>
         <mat-button-toggle value="week">1W</mat-button-toggle>
         <mat-button-toggle value="month">1M</mat-button-toggle>
