--- a/src/app/routes/dashboard/components/gainers-losers/gainers-losers.component.html
+++ b/src/app/routes/dashboard/components/gainers-losers/gainers-losers.component.html
@@ -24,10 +24,10 @@
   <p-table [value]="tickers" [rows]="50" [rowsPerPageOptions]="[5, 10, 20]">
     <ng-template pTemplate="header">
       <tr>
-        <th>Ticker</th>
+        <th>Symbol</th>
         <th>Price</th>
-        <th>CHG</th>
-        <th>CHG %</th>
+        <th>Chg</th>
+        <th>Chg %</th>
         <th>Open</th>
         <th>Vol</th>
         <th>Prev Close</th>
@@ -66,45 +66,4 @@
       </tr>
     </ng-template>
   </p-table>
-
-  <!-- <table class="md-table">
-    <thead>
-      <th>Ticker</th>
-      <th>Price</th>
-      <th>Change</th>
-      <th>Change %</th>
-      <th>Open</th>
-      <th>Vol</th>
-      <th>Prev Close</th>
-      <th>Prev Open</th>
-      <th>Prev Low</th>
-      <th>Prev High</th>
-      <th>Prev Vol</th>
-      <th>Updated</th>
-    </thead>
-    <tbody>
-      @for (s of tickers; track $index) {
-        <tr [routerLink]="['/markets', s.ticker]">
-          <td>{{ s.ticker }}</td>
-          <td>{{ s.day?.vw | number: '1.2-2' }}</td>
-          <td>
-            <span [mdPrice]="s.todaysChange">{{ s.todaysChange | number: '1.2-2' }}</span>
-          </td>
-          <td>
-            <span [mdPrice]="s.todaysChangePerc">{{ s.todaysChangePerc | number: '1.2-2' }}% </span>
-          </td>
-          <td>{{ s.day?.o | number: '1.2-2' }}</td>
-          <td>{{ (s.day?.v | shortNumber) || '-' }}</td>
-          <td>{{ s.prevDay?.c | number: '1.2-2' }}</td>
-          <td>{{ s.prevDay?.o | number: '1.2-2' }}</td>
-          <td>{{ s.prevDay?.l | number: '1.2-2' }}</td>
-          <td>{{ s.prevDay?.h | number: '1.2-2' }}</td>
-          <td>{{ s.prevDay?.v | shortNumber }}</td>
-          <td>{{ s.min?.t | date: 'HH:mm' }}</td>
-        </tr>
-      } @empty {
-        Currently unavailable
-      }
-    </tbody>
-  </table> -->
 </ng-template>
