--- a/src/app/routes/markets/components/all/all.component.html
+++ b/src/app/routes/markets/components/all/all.component.html
@@ -34,7 +34,7 @@
   <ng-template pTemplate="header">
     <tr>
       <th pSortableColumn="ticker">Symbol <p-sortIcon field="ticker"></p-sortIcon></th>
-      <th>Price <p-sortIcon field="day.vw"></p-sortIcon></th>
+      <th>Price</th>
       <th pSortableColumn="todaysChange">1D <p-sortIcon field="todaysChange"></p-sortIcon></th>
       <th pSortableColumn="todaysChangePerc">
         1D % <p-sortIcon field="todaysChangePerc"></p-sortIcon>
