--- a/src/app/routes/markets/components/price-summary/price-summary.component.scss
+++ b/src/app/routes/markets/components/price-summary/price-summary.component.scss
@@ -12,7 +12,7 @@
       @apply font-semibold;
 
       &.active {
-        @apply dark:bg-cyan-200 dark:text-black;
+        @apply bg-white dark:bg-cyan-200 dark:text-black;
       }
     }
   }
