--- a/src/app/routes/markets/components/stock/stock.component.html
+++ b/src/app/routes/markets/components/stock/stock.component.html
@@ -24,9 +24,12 @@
               }
             </ng-template>
           </mat-tab>
-          <mat-tab label="Historical"> todo </mat-tab>
+          <mat-tab label="Analysis"> ... </mat-tab>
+          <mat-tab label="Financials"> ... </mat-tab>
+          <mat-tab label="ESG"> ... </mat-tab>
         </mat-tab-group>
       </div>
+
       <div class="grid-box md:col-span-2 xl:col-span-2 !py-6 !px-8">
         <h2 class="text-xl mb-5 dark:text-white">Summary</h2>
         <div class="flex flex-col w-full">
@@ -88,19 +91,5 @@
         </div>
       </div>
     </div>
-
-    <!-- <div class="flex items-center justify-center h-48 mb-6 rounded bg-gray-50 dark:bg-gray-800">
-      <p class="text-2xl text-gray-400 dark:text-gray-500">
-        <mat-icon>add</mat-icon>
-      </p>
-    </div>
-
-    <div class="grid">
-      <div class="flex items-center justify-center rounded bg-gray-50 h-48 dark:bg-gray-800">
-        <p class="text-2xl text-gray-400 dark:text-gray-500">
-          <mat-icon>add</mat-icon>
-        </p>
-      </div>
-    </div> -->
   }
 </md-standard-template>
