--- a/src/app/routes/markets/components/stock-summary/stock-summary.component.html
+++ b/src/app/routes/markets/components/stock-summary/stock-summary.component.html
@@ -21,14 +21,14 @@
         <div class="flex my-8">
           <div class="w-1/2">
             <p class="dark:text-white text-3xl">
-              43.99 <span class="text-base" [mdPrice]="0.3">0.13 (0.30%)</span>
+              00.00 <span class="text-base" [mdPrice]="0">0.00 (0.00%)</span>
             </p>
             <p>At close: data</p>
           </div>
           <div class="w-1/2">
             @switch (data.uniSnapshot.market_status) {
               @case ('open') {
-                <p class="dark:text-white text-3xl">
+                <p class="latest-price dark:text-white text-3xl">
                   {{ data.uniSnapshot.session?.price | number: '1.2-2' }}
                   <span class="text-base" [mdPrice]="data.uniSnapshot.session?.change"
                     >{{ data.uniSnapshot.session?.change | number: '1.2-2' }} ({{
@@ -36,16 +36,16 @@
                     }}%)
                   </span>
                 </p>
-                <p>Open: data</p>
+                <p>Open: 00.00</p>
               }
               @case ('closed') {
-                <p class="dark:text-white text-3xl">
-                  43.53 <span class="text-base" [mdPrice]="-0.46">-0.46 (-1.05%)</span>
+                <p class="latest-price dark:text-white text-3xl">
+                  00.00 <span class="text-base" [mdPrice]="-0.1">-0.1 (-0.10%)</span>
                 </p>
-                <p>Close: data</p>
+                <p>Close: 00.00</p>
               }
               @case ('early_trading') {
-                <p class="dark:text-white text-3xl">
+                <p class="latest-price dark:text-white text-3xl">
                   {{ data.latestPrice?.vw || data.uniSnapshot.session?.price | number: '1.2-2' }}
                   <span class="text-base" [mdPrice]="data.uniSnapshot.session?.early_trading_change"
                     >{{ data.uniSnapshot.session?.early_trading_change | number: '1.2-2' }} ({{
@@ -56,7 +56,7 @@
                 <p>Early trading: {{ (data.latestPrice?.e | date: 'h:mma') || '-' }}</p>
               }
               @case ('late_trading') {
-                <p class="dark:text-white text-3xl">
+                <p class="latest-price dark:text-white text-3xl">
                   {{ data.latestPrice?.vw || data.uniSnapshot.session?.price | number: '1.2-2' }}
                   <span class="text-base" [mdPrice]="data.uniSnapshot.session?.late_trading_change">
                     {{ data.uniSnapshot.session?.late_trading_change | number: '1.2-2' }} ({{
