--- a/src/app/routes/markets/components/stock/stock.component.html
+++ b/src/app/routes/markets/components/stock/stock.component.html
@@ -30,7 +30,7 @@
         </mat-tab-group>
       </div>
 
-      <div class="grid-box md:col-span-2 xl:col-span-2 !py-6 !px-8">
+      <div id="summary-data" class="grid-box md:col-span-2 xl:col-span-2 !py-6 !px-8">
         <h2 class="text-xl mb-5 dark:text-white">Summary</h2>
         <div class="flex flex-col w-full">
           <div class="flex justify-between mb-6">
